# llm_agent

./: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml  run.sh
custom_tools/: _template.py  social_messages.py
examples/: client.py
skills/: README.md
skills/crowd-positioning/: SKILL.md  signals.md
src/deep_research_agent/: __init__.py  agent.py  budget.py  citations.py  clarify_fallback.py  completion.py  config.py  events.py  findings_gate.py  metering.py  models.py  prompts.py  report_gate.py  report_hygiene.py  sandbox.py  skill_usage.py  turn.py
src/deep_research_agent/tools/: clarify.py  custom.py  mcp.py  report.py  search.py
tests/: test_budget_caps.py  test_custom_tools.py  test_findings_gate.py  test_mcp_concurrency.py  test_metering.py  test_middleware_wiring.py  test_model_tiering.py  test_report_delivery.py  test_report_hygiene.py  test_tool_errors.py
