[project]
name = "deep-research-agent"
version = "0.1.0"
description = "Portable, model-agnostic deep research agent (deepagents + LangGraph) with a typed streaming-event protocol and interleaved citations."
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.6.7",
    "langchain>=1.0.0",
    "langchain-openai>=0.3.0",
    "langchain-tavily>=0.2.0",
    "langchain-mcp-adapters>=0.1.0",
    "langgraph>=0.6.0",
]

[project.optional-dependencies]
dev = ["langgraph-cli[inmem]>=0.2.0", "pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
